log
Fri 29 Mar 2024 12:01:07 AM UTC: 
 tests:  0|6
total_score: 0/70
3444074
Fri 29 Mar 2024 12:07:44 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0e55949
Fri 29 Mar 2024 12:08:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d419587
Fri 29 Mar 2024 12:10:44 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
b03a787
Fri 29 Mar 2024 12:11:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
188cfd8
Fri 29 Mar 2024 12:14:17 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
142819b
Fri 29 Mar 2024 12:17:06 AM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
1822ce9
Fri 29 Mar 2024 12:19:17 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9422104
Fri 29 Mar 2024 12:20:12 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:74:23: error: expected ‘;’ before ‘}’ token
   74 |   return list->current
      |                       ^
      |                       ;
   75 | }
      | ~                      
Compilation failed
ed5bd1c
Fri 29 Mar 2024 12:20:40 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
bbcf49a
Fri 29 Mar 2024 12:21:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
506c92a
